SERVER-25136 allow index types which do not support collation on a collection with a non-simple default collation

The application must use {locale: "simple"} to override the
default in this case.